[package]
edition = "2021"
name    = "helix-btc-bridge-relayer"
version = "0.1.0"

[dependencies]
# crates.io
anyhow             = { version = "1.0" }
app_dirs2          = { version = "2.5" }
bip39              = { version = "2" }
bitcoin            = { version = "0.32", features = ["rand-std", "serde"] }
clap               = { version = "4.5", features = ["derive"] }
color-eyre         = { version = "0.6" }
once_cell          = { version = "1.8" }
reqwest            = { version = "0.12", features = ["json"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = { version = "1.0" }
tokio              = { version = "1.37", features = ["macros", "rt-multi-thread"] }
toml               = { version = "0.8" }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
