[package]
edition = "2021"
name    = "helix-btc-bridge-relayer"
version = "0.1.0"

[dependencies]
# crates.io
app_dirs2          = { version = "2.5" }
array-bytes        = { version = "6.2" }
bitcoin            = { version = "0.32", features = ["rand-std", "serde"] }
bytes              = { version = "1.6" }
chrono             = { version = "0.4" }
color-eyre         = { version = "0.6" }
deadpool-sqlite    = { version = "0.8" }
once_cell          = { version = "1.8" }
reqwest            = { version = "0.12" }
rusqlite           = { version = "0.31", features = ["chrono", "uuid"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = { version = "1.0" }
thiserror          = { version = "1.0" }
tokio              = { version = "1.37", features = ["rt-multi-thread"] }
toml               = { version = "0.8" }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
uuid               = { version = "1.8", features = ["v4"] }

# clap               = { version = "4.5", features = ["derive"] }
